--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     overflow-x: hidden;
     --dark-bg-color: #1F2937;
+    --light-blue-clr: #3882F6;
 }
 
 .container { 
@@ -123,7 +124,7 @@ ul.nav-links li a:hover {
 }
 
 .signup-btn {
-    background-color: #3882f6;
+    background-color: var(--light-blue-clr);
     padding: 5px 25px;
     border: none;
     border-radius: 5px;
@@ -220,7 +221,8 @@ main {
 .box {
     width: 150px;
     height: 150px;
-    border: 3px solid #3882f6;
+    border: 3px solid;
+    border-color: var(--light-blue-clr);
     border-radius: 10px;
     justify-self: flex-start;
     margin-bottom: 0.5rem;
@@ -283,7 +285,7 @@ main {
 .a-container {
     flex: 0.6;
     height: 100px;
-    background-color: #3882f6;
+    background-color: var(--light-blue-clr);
     border-radius: 5px;
     display: flex;
     justify-content: center;
@@ -319,7 +321,7 @@ main {
 }
 
 .cta-btn {
-    background-color: #3882f6;
+    background-color: var(--light-blue-clr);
     border: 1px solid white;
     border-radius: 5px;
     padding: 5px;
@@ -327,6 +329,12 @@ main {
     width: 90px;
     font-weight: bold; 
     cursor: pointer;
+}
+
+.cta-btn:hover {
+    background-color: white;
+    color: var(--light-blue-clr);
+    transition: 0.3s;
 }
 
 footer {
